--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.mjs",
   "type": "module",
   "scripts": {
-    "test": "node ./node_modules/.bin/jest",
+    "test": "node --experimental-vm-modules ./node_modules/.bin/jest",
     "test:coverage": "npm test -- --coverage",
     "test:watch": "npm test -- --watch",
     "new:day": "node ./src/_lib/new-day.mjs"
